Colores y etiquetas en botones

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 #myButton_red{
     background-color: red;
 }
+
+#myButton_white{
+    background-color: white;
+}
+
+#myButton_blue{
+    background-color: cyan;
+}
