--- a/gui.glade
+++ b/gui.glade
@@ -2,7 +2,6 @@
 <!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <object class="GtkTextBuffer" id="textbuffer1"/>
   <object class="GtkWindow" id="window_main">
     <property name="name">backgroundApp</property>
     <property name="visible">True</property>
@@ -10,8 +9,6 @@
     <property name="title" translatable="yes">Batalla Naval</property>
     <property name="resizable">False</property>
     <property name="window_position">center</property>
-    <property name="default_width">500</property>
-    <property name="default_height">800</property>
     <property name="icon_name">applications-games</property>
     <signal name="destroy" handler="on_window_main_destroy" swapped="no"/>
     <child>
@@ -37,6 +34,9 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Tus Barcos</property>
+                    <style>
+                      <class name="label"/>
+                    </style>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -423,6 +423,9 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Barcos enemigos</property>
+                    <style>
+                      <class name="label"/>
+                    </style>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -847,10 +850,31 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
+            <property name="spacing">10</property>
+            <child>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Bitacora</property>
+                <style>
+                  <class name="label"/>
+                </style>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
             <child>
               <object class="GtkScrolledWindow">
+                <property name="name">consolaEditada</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="margin_left">10</property>
+                <property name="margin_right">10</property>
+                <property name="margin_top">5</property>
+                <property name="margin_bottom">5</property>
                 <property name="shadow_type">in</property>
                 <property name="min_content_width">300</property>
                 <property name="min_content_height">300</property>
@@ -858,17 +882,24 @@
                 <property name="max_content_height">300</property>
                 <child>
                   <object class="GtkTextView" id="console">
+                    <property name="name">consolaEditada</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="editable">False</property>
                     <property name="cursor_visible">False</property>
+                    <style>
+                      <class name="consolaEditada"/>
+                    </style>
                   </object>
                 </child>
+                <style>
+                  <class name="consolaEditada"/>
+                </style>
               </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">0</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -880,6 +911,9 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Barcos</property>
+                    <style>
+                      <class name="label"/>
+                    </style>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -890,6 +924,7 @@
                 <child>
                   <object class="GtkButton" id="btnCarrier">
                     <property name="label" translatable="yes">Portaaviones</property>
+                    <property name="name">myButton_gray2</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -904,6 +939,7 @@
                 <child>
                   <object class="GtkButton" id="btnBattleship">
                     <property name="label" translatable="yes">Acorazado</property>
+                    <property name="name">myButton_gray2</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -918,6 +954,7 @@
                 <child>
                   <object class="GtkButton" id="btnDestroyer">
                     <property name="label" translatable="yes">Destructor</property>
+                    <property name="name">myButton_gray2</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -932,6 +969,7 @@
                 <child>
                   <object class="GtkButton" id="btnFrigate">
                     <property name="label" translatable="yes">Fragata</property>
+                    <property name="name">myButton_gray2</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -946,6 +984,7 @@
                 <child>
                   <object class="GtkButton" id="btnOrientation">
                     <property name="label" translatable="yes">Horizontal</property>
+                    <property name="name">myButton_gray2</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -961,7 +1000,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
             <child>
@@ -973,6 +1012,9 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Insertar barcos</property>
+                    <style>
+                      <class name="label"/>
+                    </style>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -983,6 +1025,7 @@
                 <child>
                   <object class="GtkButton" id="btn_automatico">
                     <property name="label" translatable="yes">Automatico</property>
+                    <property name="name">myButton_gray</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -997,6 +1040,7 @@
                 <child>
                   <object class="GtkButton" id="btn_manual">
                     <property name="label" translatable="yes">Manual</property>
+                    <property name="name">myButton_gray</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -1012,7 +1056,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">2</property>
+                <property name="position">3</property>
               </packing>
             </child>
           </object>
