--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
 #myButton_gray{
-    background-color: #121212;
+    background-color: #212121;
     color:white;
 }
 
 #myButton_gray:disabled *{
-    background-color: #121212;
+    background-color: #212121;
     color:white;
+}
+
+#myButton_gray2{
+    background-color: #212121;
+    color:white;
+}
+
+#myButton_gray2:disabled *{
+
 }
 
 #myButton_red{
@@ -53,13 +62,22 @@
 	color:white;
 }
 
+.label{
+	color:white;
+}
+
 #backgroundApp{
 	background: #121212;
 	font-family: "Roboto";
 	
 }
 
-
+#consolaEditada{
+	background-color: #212121;
+	color:#212121;
+	background: #212121;
+	border-style: none;
+}
 
 .buttonInicio{
 	background: #1f1f1f;
@@ -68,6 +86,11 @@
 	border-style: none;
 }
 
+.consolaEditada text {
+    background-color: #212121;
+    font-size: 19px;
+    border-style: none;
+}
 
 .panelInicio{
 	padding-left:50px;
